building ui and editing algorithm

--- a/GCodeViewer/GCodeViewer/GCodeViewer.csproj
+++ b/GCodeViewer/GCodeViewer/GCodeViewer.csproj
@@ -99,5 +99,11 @@
     <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GCodeViewer.RenderWindow.Utils\GCodeViewer.RenderWindow.Utils.csproj">
+      <Project>{bb88192c-0b1c-4231-8cbc-7e490ca8615c}</Project>
+      <Name>GCodeViewer.RenderWindow.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
