--- a/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
+++ b/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
@@ -58,7 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Views\MainWindow.xaml">
+    <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -66,7 +66,28 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Views\MainWindow.xaml.cs">
+    <Compile Include="Commands\CloseFileCommand.cs" />
+    <Compile Include="Commands\OpenFileCommand.cs" />
+    <Compile Include="Commands\ResetTextCommand.cs" />
+    <Compile Include="Commands\SaveAsCommand.cs" />
+    <Compile Include="Commands\SaveFileCommand.cs" />
+    <Compile Include="REWORK\PointExtractor.cs" />
+    <Compile Include="Interfaces\FileAccess\IFileChooser.cs" />
+    <Compile Include="Interfaces\IPointExtractor.cs" />
+    <Compile Include="Interfaces\ViewModels\IRenderWindowViewModel.cs" />
+    <Compile Include="Models\GCode.cs" />
+    <Compile Include="Ninject\Bindings.cs" />
+    <Compile Include="Interfaces\FileAccess\IFile.cs" />
+    <Compile Include="Interfaces\FileAccess\IFileBuffer.cs" />
+    <Compile Include="Interfaces\FileAccess\IFileSaver.cs" />
+    <Compile Include="Interfaces\ViewModels\ITextViewModel.cs" />
+    <Compile Include="Interfaces\ViewModels\IToolbarViewModel.cs" />
+    <Compile Include="Objects\FileChooser.cs" />
+    <Compile Include="Objects\FileSaver.cs" />
+    <Compile Include="ViewModels\RenderWindowViewModel.cs" />
+    <Compile Include="ViewModels\GCodeViewModel.cs" />
+    <Compile Include="ViewModels\ToolbarViewModel.cs" />
+    <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -98,16 +119,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GCodeViewer.RenderWindow.Utils\GCodeViewer.RenderWindow.Utils.csproj">
-      <Project>{bb88192c-0b1c-4231-8cbc-7e490ca8615c}</Project>
-      <Name>GCodeViewer.RenderWindow.Utils</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
