--- a/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
+++ b/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
@@ -58,6 +58,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Objects\TextBuffer.cs" />
+    <Compile Include="ViewModels\Commands\GCodeFileFilter.cs" />
+    <Compile Include="ViewModels\Commands\SaveAsCommand.cs" />
+    <Compile Include="ViewModels\Commands\SaveCommand.cs" />
     <Compile Include="Views\LiveEditorPage.xaml.cs">
       <DependentUpon>LiveEditorPage.xaml</DependentUpon>
     </Compile>
@@ -72,18 +76,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ViewModels\Commands\CloseFileCommand.cs" />
     <Compile Include="ViewModels\Commands\OpenFileCommand.cs" />
-    <Compile Include="ViewModels\Commands\ResetTextCommand.cs" />
-    <Compile Include="ViewModels\Commands\SaveAsCommand.cs" />
-    <Compile Include="ViewModels\Commands\SaveFileCommand.cs" />
-    <Compile Include="Objects\CacheFile.cs" />
     <Compile Include="Objects\TextFile.cs" />
     <Compile Include="REWORK\PointExtractor.cs" />
-    <Compile Include="Interfaces\FileAccess\FileChooser\IFileChooser.cs" />
+    <Compile Include="Interfaces\FileAccess\IFileChooser.cs" />
     <Compile Include="Interfaces\IPointExtractor.cs" />
     <Compile Include="Interfaces\ViewModels\IRenderWindowViewModel.cs" />
-    <Compile Include="Models\GCode.cs" />
     <Compile Include="Ninject\Bindings.cs" />
     <Compile Include="Interfaces\FileAccess\IFile.cs" />
     <Compile Include="Interfaces\FileAccess\ITextBuffer.cs" />
@@ -92,9 +90,6 @@
     <Compile Include="Interfaces\ViewModels\IToolbarViewModel.cs" />
     <Compile Include="Objects\FileChooser.cs" />
     <Compile Include="Objects\FileSaver.cs" />
-    <Compile Include="ViewModels\RenderWindowViewModel.cs" />
-    <Compile Include="ViewModels\GCodeViewModel.cs" />
-    <Compile Include="ViewModels\ToolbarViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -137,6 +132,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\document-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
