--- a/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
+++ b/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
@@ -133,13 +133,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icons\document-icon.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Interfaces\ViewModels\Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\document-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
