--- a/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
+++ b/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
@@ -58,8 +58,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Interfaces\ViewModels\IPageLocator.cs" />
-    <Compile Include="Objects\TextBuffer.cs" />
+    <Compile Include="Components\Interfaces\ViewModels\IPageLocator.cs" />
+    <Compile Include="Components\FileAccess\TextBuffer.cs" />
     <Compile Include="ViewModels\Commands\GCodeFileFilter.cs" />
     <Compile Include="ViewModels\Commands\SaveAsCommand.cs" />
     <Compile Include="ViewModels\Commands\SaveCommand.cs" />
@@ -80,19 +80,19 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ViewModels\Commands\OpenFileCommand.cs" />
-    <Compile Include="Objects\TextFile.cs" />
-    <Compile Include="REWORK\PointExtractor.cs" />
-    <Compile Include="Interfaces\FileAccess\IFileChooser.cs" />
-    <Compile Include="Interfaces\IPointExtractor.cs" />
-    <Compile Include="Interfaces\ViewModels\IRenderWindowViewModel.cs" />
+    <Compile Include="Components\FileAccess\TextFile.cs" />
+    <Compile Include="aaREWORK these objects\PointExtractor.cs" />
+    <Compile Include="Components\Interfaces\FileAccess\IFileChooser.cs" />
+    <Compile Include="Components\Interfaces\IPointExtractor.cs" />
+    <Compile Include="Components\Interfaces\ViewModels\IRenderWindowViewModel.cs" />
     <Compile Include="Ninject\Bindings.cs" />
-    <Compile Include="Interfaces\FileAccess\IFile.cs" />
-    <Compile Include="Interfaces\FileAccess\ITextBuffer.cs" />
-    <Compile Include="Interfaces\FileAccess\IFileSaver.cs" />
-    <Compile Include="Interfaces\ViewModels\ITextViewModel.cs" />
-    <Compile Include="Interfaces\ViewModels\IToolbarViewModel.cs" />
-    <Compile Include="Objects\FileChooser.cs" />
-    <Compile Include="Objects\FileSaver.cs" />
+    <Compile Include="Components\Interfaces\FileAccess\IFile.cs" />
+    <Compile Include="Components\Interfaces\FileAccess\ITextBuffer.cs" />
+    <Compile Include="Components\Interfaces\FileAccess\IFileSaver.cs" />
+    <Compile Include="Components\Interfaces\ViewModels\ITextViewModel.cs" />
+    <Compile Include="Components\Interfaces\ViewModels\IToolbarViewModel.cs" />
+    <Compile Include="Components\FileAccess\FileChooser.cs" />
+    <Compile Include="Components\FileAccess\FileSaver.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -136,11 +136,9 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Interfaces\ViewModels\Models\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Icons\document-icon.png" />
+    <Resource Include="Resources\document-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
