--- a/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
+++ b/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
@@ -60,9 +60,9 @@
     </ApplicationDefinition>
     <Compile Include="Components\Interfaces\IPageLocator.cs" />
     <Compile Include="Components\FileAccess\TextBuffer.cs" />
-    <Compile Include="ViewModels\Commands\GCodeFileFilter.cs" />
-    <Compile Include="ViewModels\Commands\SaveAsCommand.cs" />
-    <Compile Include="ViewModels\Commands\SaveCommand.cs" />
+    <Compile Include="Commands\GCodeFileFilter.cs" />
+    <Compile Include="Commands\SaveAsCommand.cs" />
+    <Compile Include="Commands\SaveCommand.cs" />
     <Compile Include="ViewModels\PageSwapper.cs" />
     <Compile Include="ViewModels\TextEditorBase.cs" />
     <Compile Include="ViewModels\ToolbarBase.cs" />
@@ -80,7 +80,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ViewModels\Commands\OpenFileCommand.cs" />
+    <Compile Include="Commands\OpenFileCommand.cs" />
     <Compile Include="Components\FileAccess\TextFile.cs" />
     <Compile Include="aaREWORK these objects\PointExtractor.cs" />
     <Compile Include="Components\Interfaces\FileAccess\IFileChooser.cs" />
