--- a/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
+++ b/GCodeViewer/GCodeViewer/GCodeViewer.WPF.csproj
@@ -58,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\CloseFileCommand.cs" />
     <Compile Include="Components\Interfaces\IPageLocator.cs" />
     <Compile Include="Components\FileAccess\TextBuffer.cs" />
     <Compile Include="Commands\GCodeFileFilter.cs" />
