--- a/GCodeViewer/MultithreadingBindingTest/MultithreadingBindingTest.csproj
+++ b/GCodeViewer/MultithreadingBindingTest/MultithreadingBindingTest.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BC9DB81E-8402-47E9-B619-C97577E1961C}</ProjectGuid>
+    <ProjectGuid>{6BB18C51-0E6F-4D91-BA42-2F74BA46B0AD}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>GCodeViewer</RootNamespace>
-    <AssemblyName>GCodeViewer</AssemblyName>
+    <RootNamespace>MultithreadingBindingTest</RootNamespace>
+    <AssemblyName>MultithreadingBindingTest</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,9 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -58,23 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Components\Interfaces\IPageLocator.cs" />
-    <Compile Include="Components\FileAccess\TextBuffer.cs" />
-    <Compile Include="Commands\GCodeFileFilter.cs" />
-    <Compile Include="Commands\SaveAsCommand.cs" />
-    <Compile Include="Commands\SaveCommand.cs" />
-    <Compile Include="ViewModels\PageSwapper.cs" />
-    <Compile Include="ViewModels\TextEditorBase.cs" />
-    <Compile Include="ViewModels\ToolbarBase.cs" />
-    <Compile Include="Views\Controls\DarkThemeTextEditor.xaml.cs">
-      <DependentUpon>DarkThemeTextEditor.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\LiveEditorPage.xaml.cs">
-      <DependentUpon>LiveEditorPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\OpenFilePage.xaml.cs">
-      <DependentUpon>OpenFilePage.xaml</DependentUpon>
-    </Compile>
+    <Compile Include="TextViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -83,36 +64,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Commands\OpenFileCommand.cs" />
-    <Compile Include="Components\FileAccess\TextFile.cs" />
-    <Compile Include="aaREWORK these objects\PointExtractor.cs" />
-    <Compile Include="Components\Interfaces\FileAccess\IFileChooser.cs" />
-    <Compile Include="Components\Interfaces\IPointExtractor.cs" />
-    <Compile Include="Components\Interfaces\ViewModels\IRenderWindowViewModel.cs" />
-    <Compile Include="Ninject\Bindings.cs" />
-    <Compile Include="Components\Interfaces\FileAccess\IFile.cs" />
-    <Compile Include="Components\Interfaces\FileAccess\ITextBuffer.cs" />
-    <Compile Include="Components\Interfaces\FileAccess\IFileSaver.cs" />
-    <Compile Include="Components\Interfaces\ViewModels\ITextViewModel.cs" />
-    <Compile Include="Components\Interfaces\ViewModels\IToolbarViewModel.cs" />
-    <Compile Include="Components\FileAccess\FileChooser.cs" />
-    <Compile Include="Components\FileAccess\FileSaver.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\Controls\DarkThemeTextEditor.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\LiveEditorPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\OpenFilePage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -132,7 +87,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -140,13 +94,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Resource Include="Resources\document-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
