replaces OpenTK with OpenGL.Net

--- a/src/FirstTest/FirstTest.csproj
+++ b/src/FirstTest/FirstTest.csproj
@@ -102,12 +102,12 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Shaders\shader.frag">
+    <Resource Include="Shaders\shader.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="Shaders\shader.vert">
+    </Resource>
+    <Resource Include="Shaders\shader.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
