--- a/src/OpenGLTest/packages.config
+++ b/src/OpenGLTest/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="OpenGL.Net" version="0.8.4" targetFramework="net472" />
   <package id="OpenGL.Net.WinForms" version="0.8.4" targetFramework="net472" />
+  <package id="OpenTK" version="3.1.0" targetFramework="net472" />
 </packages>
