fixed the problem with the shaders not working (vs copies the resource folder instead of the resources) :^|

--- a/src/OpenGL-Playground/OpenTkTest/OpenTkTest.csproj
+++ b/src/OpenGL-Playground/OpenTkTest/OpenTkTest.csproj
@@ -102,12 +102,12 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Resource Include="shader\shader.frag">
+    <EmbeddedResource Include="shader\shader.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="shader\shader.vert">
+    </EmbeddedResource>
+    <EmbeddedResource Include="shader\shader.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
