--- a/src/GCodeViewer.OpenTK.Helpers/GCodeViewer.OpenTK.Helpers.csproj
+++ b/src/GCodeViewer.OpenTK.Helpers/GCodeViewer.OpenTK.Helpers.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0B166ABC-A1F9-4160-BA5A-0A332BFD8ED0}</ProjectGuid>
+    <ProjectGuid>{6B77C13F-535D-4F9B-A1C9-93091D21511F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GCodeViewer.WPF.Controls</RootNamespace>
-    <AssemblyName>GCodeViewer.WPF.Controls</AssemblyName>
+    <RootNamespace>GCodeViewer.OpenTK.Helpers</RootNamespace>
+    <AssemblyName>GCodeViewer.OpenTK.Helpers</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -36,9 +36,6 @@
     <Reference Include="OpenTK, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.3.1.0\lib\net20\OpenTK.dll</HintPath>
     </Reference>
-    <Reference Include="OpenTK.GLControl, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <HintPath>..\packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll</HintPath>
-    </Reference>
     <Reference Include="OpenToolkit.Core, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenToolkit.Core.4.0.0-pre3\lib\netstandard2.0\OpenToolkit.Core.dll</HintPath>
     </Reference>
@@ -60,33 +57,26 @@
     <Reference Include="OpenToolkit.Windowing.GraphicsLibraryFramework, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenToolkit.Windowing.GraphicsLibraryFramework.4.0.0-pre3\lib\net472\OpenToolkit.Windowing.GraphicsLibraryFramework.dll</HintPath>
     </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PointCloudViewer.cs" />
+    <Compile Include="Camera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shader.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GCodeViewer.OpenTK.Helpers\GCodeViewer.OpenTK.Helpers.csproj">
-      <Project>{6b77c13f-535d-4f9b-a1c9-93091d21511f}</Project>
-      <Name>GCodeViewer.OpenTK.Helpers</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\opentoolkit.redist.glfw.3.3.0-pre20190424184726\build\opentoolkit.redist.glfw.targets" Condition="Exists('..\packages\opentoolkit.redist.glfw.3.3.0-pre20190424184726\build\opentoolkit.redist.glfw.targets')" />
