rename shader folder

--- a/src/GCodeViewer.OpenTK.Resources/GCodeViewer.OpenTK.Resources.csproj
+++ b/src/GCodeViewer.OpenTK.Resources/GCodeViewer.OpenTK.Resources.csproj
@@ -44,12 +44,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="shader\shader.frag">
+    <EmbeddedResource Include="Shaders\shader.frag">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="shader\shader.vert">
+    <EmbeddedResource Include="Shaders\shader.vert">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
