--- a/src/GCodeViewer.OpenTK.Helpers/GCodeViewer.OpenTK.Helpers.csproj
+++ b/src/GCodeViewer.OpenTK.Helpers/GCodeViewer.OpenTK.Helpers.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shader.cs" />
+    <Compile Include="VertexBufferObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenTK.dll.config" />
