--- a/src/GCodeViewer.OpenTK.Helpers/GCodeViewer.OpenTK.Helpers.csproj
+++ b/src/GCodeViewer.OpenTK.Helpers/GCodeViewer.OpenTK.Helpers.csproj
@@ -67,9 +67,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Camera.cs" />
+    <Compile Include="OrbitCamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shader.cs" />
+    <Compile Include="Shaders\Shader.cs" />
+    <Compile Include="Shaders\ShaderFactory.cs" />
     <Compile Include="VertexBufferObject.cs" />
   </ItemGroup>
   <ItemGroup>
