--- a/src/GCodeViewer.OpenTK.Helpers/GCodeViewer.OpenTK.Helpers.csproj
+++ b/src/GCodeViewer.OpenTK.Helpers/GCodeViewer.OpenTK.Helpers.csproj
@@ -69,6 +69,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Objects3D\Object3D.cs" />
+    <Compile Include="Objects3D\ObjectType.cs" />
     <Compile Include="OrbitCamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shaders\Shader.cs" />
